# strix

./: CONTRIBUTING.md  Makefile  pyproject.toml
src/strix/: __init__.py
