[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strix"
version = "0.1.0"
description = "A lightweight, fast, and extensible CLI toolkit for developer workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "strix contributors" },
]
keywords = ["cli", "developer-tools", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
strix = "strix.cli:main"

[project.urls]
Homepage = "https://github.com/usestrix/strix"
Repository = "https://github.com/usestrix/strix"
Issues = "https://github.com/usestrix/strix/issues"
Changelog = "https://github.com/usestrix/strix/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/strix"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["strix"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=strix",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]

[tool.coverage.run]
source = ["src/strix"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
